# MartinStrategy-go

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  README.md  USAGE.md  config.yaml  go.mod  go.sum
cmd/bot/: main.go
go/: main.go
internal/config/: config.go
internal/exchange/: binance.go  lighter.go
internal/strategy/: strategy.go
lighter-rust/signer/: go.mod
python/: requirements.txt
scripts/: get_account_index.py
src/: lib.rs  main.rs
src/config/: mod.rs
src/core/: mod.rs
src/exchange/: mod.rs
src/storage/: mod.rs
src/strategy/: mod.rs
src/utils/: indicators.rs  logger.rs  mod.rs
